# Mycelium

./: .cursorrules  .dockerignore  .env.example  .env.production.example  .gitignore  404.html  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  MANIFESTO.md  README.md  RESONANCE_OPERATOR_GUIDE.md  RESONANCE_RECOMMENDATIONS.md  WORKFLOW_SO_FAR.md  benchmark_models.py  crew_ai_starter.py  docker-compose.yml  evaluate.py  index.html  mkdocs.yml  mock_nexus_state.json  model_performance_table.md  nexus_ui_config.json  pyproject.toml  requirements.txt  sitemap.xml  twa-manifest.json
.secrets/: agent_trace_spec.json  dwellers_manifest.md
.well-known/: assetlinks.json
Project_Resonance/: README.md
agent_metabolism/: README.md  dwellers_registry.json  resonance_memory.json  state_of_fluid_report_template.md  thermal_awakening_protocol.md
api_reference/: index.html
benchmarks/: competitive_benchmark.py  plot_benchmarks.py  run_benchmarks.py
changelog/: index.html
companion/: index.html
crystallized_substrate/: README.md  bedrock_manifest.json
docs/: android_twa_launch_readiness_checklist.md  android_twa_packaging.md  api_reference.md  changelog.md  companion.md  device_product_spec.md  digital_thermodynamics_manifesto.md  federation.md  getting_started.md  github_actions_twa_release_secrets.md  hybrid_edge_core_deployment.md  index.md  install_guide.md  mobile.md  physics.md  platform_architecture.md  production_readiness_summary.md  railway_deploy_runbook.md  railway_launch_pack.md  railway_production_env.md  railway_today_deploy.md  release_launch_checklist.md  saas_deployment.md  startup_blueprint.md  theory.md
federation/: index.html
getting_started/: index.html
k8s/: deployment.yaml  hpa.yaml  service.yaml
mobile/: index.html
mycelium_app/: __init__.py  assistant_profile.py  auto_tune.py  causal_trace.py  crystallization.py  curiosity.py  db.py  deps.py  desktop_notify.py  digital_soul.py  ecosystem_bridge.py  fast_predict.py  feature_settling.py  feedback_ionizer.py  force_field.py  force_graph.py  growth.py  hive_empathy.py  hive_readiness.py  hive_sync.py  homeostasis.py  humanizer.py  hybrid_predictor.py  identity_presentation.py  jarvis.py  knowledge_sync.py  learning_daemon.py  main.py  math_utils.py  messaging_bridge.py  metric_snapshot.py  models.py  narrative.py  nexus_ionizer.py  open_world_simulation.py  parental_policy.py  particle_stats.py  pattern_engine.py  physics_predictor.py  predictor_homeostasis.py  (+15 more)
physics/: index.html
physml/: __init__.py  __main__.py  _log.py  action_selector.py  active_learner.py  agent.py  agent_api.py  agent_comms.py  agent_controller.py  agent_memory.py  anomaly.py  arena.py  automl.py  autonomous_agent.py  bandit.py  bandpass_filter.py  belief_updater.py  browser_agent.py  browser_extension_api.py  calibration.py  causal_graph.py  checkpoint.py  cli.py  cluster_engine.py  comm_bridge.py  companion.py  competitive_report.py  conformal.py  conversation.py  conversation_store.py  curriculum.py  data_validator.py  desktop_bridge.py  device_monitor.py  digital_soul.py  doc_processor.py  drift.py  ensemble_predictor.py  environment_model.py  estimator.py  (+92 more)
physml.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
raw_data/: README.md  THERMAL_AWAKENING_2026.prompt  noise_register.json
requirements/: base.txt  benchmarks.txt  optional-analytics.txt  prod.txt
scripts/: ack_old_nudges.py  assess_job_salary_with_cleaning.py  backup_db.sh  benchmark_job_salary_tasks.py  benchmark_salary_classifiers.py  benchmark_salary_models.py  check_handoff_slo.py  child_smoketest_ingest.py  collector_standalone.py  create_user.py  db_migration_preflight.py  deep_freeze_sweep.py  deploy_readiness_check.sh  eval_autonomy_modes.py  generate_twa_icons.py  global_audit_report.py  health_smoketest.py  hive_invite_user.sh  install.sh  install_child_agent_service.sh  install_myco_service.sh  learner_standalone.py  monitor_deep_freeze.py  mycelium.service  noise_compactor.sh  observe_daemon.py  passive_telemetry_daemon.py  poll_nudges_and_notify.py  public_alpha_checklist.py  rebuild_env.sh  release_twa_build.sh  report_task_replica_focus.py  resonance_pruning_protocol.py  restore_db.sh  run_assistant_bootstrap.sh  run_child.sh  run_parent.sh  run_thermal_cycle_forever.py  run_worker.py  sample_salary_dataset.py  (+13 more)
search/: search_index.json
static/: SecondaryForceStream.js  manifest.webmanifest  sw.js
templates/: assistant_profile.html  base.html  chat.html  cinema.html  curiosity.html  demo.html  device_shell.html  ecosystem.html  game.html  hive_health.html  knowledge.html  live.html  login.html  platform.html  predict.html  project_tree.html  projects.html  sedimentation.html  (+3 more)
(+129 files in other folders)
