[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "physml"
version = "1.0.0"
description = "Physics-inspired autonomous ML — the Mycelium digital companion for local AI."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Mycelium Contributors" }]
keywords = [
    "machine-learning",
    "active-learning",
    "autonomous-agent",
    "tabular-data",
    "physics-inspired",
    "myco",
    "mycelium",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26,<3",
    "pandas>=2.2,<3",
    "scipy>=1.12,<2",
    "scikit-learn>=1.4,<2",
    "feature-engine>=1.7,<2",
    "joblib>=1.3",
]

[project.optional-dependencies]
server   = ["fastapi>=0.110", "uvicorn[standard]>=0.29"]
docs     = ["mkdocs-material>=9"]
dev      = ["pytest>=8", "pytest-cov", "pytest-timeout>=2.3", "ruff", "httpx"]
llm      = ["anthropic>=0.40"]
voice    = ["faster-whisper>=1.0", "sounddevice>=0.4"]
vector   = ["sentence-transformers>=2.0"]
screen   = ["pyautogui>=0.9", "mss>=9.0"]
browser  = ["playwright>=1.40"]
notify   = ["plyer>=2.1"]
ocr      = ["pytesseract>=0.3", "Pillow>=10.0"]
watcher  = ["watchdog>=4.0"]
dotenv   = ["python-dotenv>=1.0"]
companion = [
    "anthropic>=0.40",
    "faster-whisper>=1.0",
    "sounddevice>=0.4",
    "sentence-transformers>=2.0",
    "pyttsx3>=2.90",
    "plyer>=2.1",
    "watchdog>=4.0",
    "python-dotenv>=1.0",
]
full = [
    "anthropic>=0.40",
    "faster-whisper>=1.0",
    "sounddevice>=0.4",
    "sentence-transformers>=2.0",
    "pyttsx3>=2.90",
    "plyer>=2.1",
    "watchdog>=4.0",
    "pyautogui>=0.9",
    "mss>=9.0",
    "playwright>=1.40",
    "pytesseract>=0.3",
    "Pillow>=10.0",
    "pdfplumber>=0.10",
    "openpyxl>=3.1",
    "python-dotenv>=1.0",
]

[project.scripts]
physml = "physml.cli:main"

[project.urls]
Homepage   = "https://github.com/chizoalban2003-beep/Mycelium"
Repository = "https://github.com/chizoalban2003-beep/Mycelium"
Issues     = "https://github.com/chizoalban2003-beep/Mycelium/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["physml*", "physml.llm*"]

[tool.setuptools.package-data]
physml = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-q --tb=short --timeout=300 -m 'not slow'"
timeout   = 300
timeout_method = "thread"
timeout_func_only = true

[tool.ruff]
line-length = 100
target-version = "py310"
